Fix error About Size Font Mobile, Carousel Indicadors, Footer Size Mobile and Slide Position Mobile

--- a/front/src/components/styles.css
+++ b/front/src/components/styles.css
@@ -269,6 +269,14 @@ section.about-container {
   align-items: center;
 }
 
+h1.about-title {
+  font-size: 3rem;
+}
+
+h4.about-text-content {
+  font-size: 1.5rem;
+}
+
 /* Contact */
 
 section.contact-container {
@@ -332,6 +340,8 @@ div.intro-background {
 
 div.content-container {
   transition: opacity 1.2s ease-out;
+  display: flex;
+  justify-content: center;
 }
 
 .content-card {
@@ -411,7 +421,7 @@ ul li .footer-group-rede-icon {
 
 li.footer-group-redes-li {
   list-style: none;
-  margin: 0 25px;
+  margin: 0 1.7rem  ;
 }
 
 a.footer-group-redes-a {
@@ -525,8 +535,8 @@ section.slide-container {
   position: fixed;
   height: 80vh;
   width: 80vw;
-  top: 5rem;
-  left: 9rem;
+  top: 10%;
+  left: 10%;
   background-color: #332f2f;
   /* border-radius: 10px; */
   z-index: 11;
@@ -570,24 +580,25 @@ div.carousel-fade  .active.carousel-item-prev {
 }
 
 button.slide-buttom-close {
-  border: 0;
+  color: #f00;
+  border: none;
   padding: 0;
   cursor: pointer;
   max-width: 100%;
   background-color: transparent;
   position: fixed;
-  top: 5.5rem;
-  left: 9.5rem;
+  top: 10.5%;
+  left: 10.5%;
   z-index: 12;
 }
 
 button.slide-buttom-close:active {
-  color: #f00;
+  color: rgb(195, 7, 7);
   border: none;
 }
 
 button.slide-buttom-close:hover {
-  color: #f00;
+  color: rgb(195, 7, 7);
   border: none;
 }
 
@@ -700,7 +711,7 @@ div.slide-img {
 
   li.footer-group-redes-li {
     list-style: none;
-    margin: 0 5px;
+    margin: 0;
   }
 
   .content-card {
@@ -731,6 +742,27 @@ div.slide-img {
     flex-direction: column;
     padding-right: 5rem;
     padding-left: 1rem;
+  }
+
+  h1.about-title {
+    font-size: 2rem;
+  }
+  
+  h4.about-text-content {
+    font-size: 1rem;
+  }
+  
+  h3.footer-group-title {
+    font-weight: bolder;
+    font-size: 14px;
+    margin-bottom: 1rem;
+  }
+
+  a.footer-link-a {
+    cursor: pointer;
+    color: #999;
+    margin-bottom: 1rem;
+    font-size: 12px;
   }
 
 }
